[package]
name = "reproducible-builds-certification-repository"
version = "0.0.0"

[dependencies]

# For HTTP
rocket = "0.4.0"
rocket_codegen = "0.4.0"

# For JSON
serde = "1.0.83"
serde_derive = "1.0.83"

# To make sure we get the fix for
# https://github.com/alexcrichton/proc-macro2/pull/138:
proc-macro2 = "0.4.24"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
